improved results with using rdkit inchikeys

--- a/notebooks/get_classes_prospecting.ipynb
+++ b/notebooks/get_classes_prospecting.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 1,
    "id": "faced-correspondence",
    "metadata": {},
    "outputs": [],
@@ -22,12 +22,13 @@
     "import urllib\n",
     "import glob\n",
     "import json\n",
-    "from typing import Dict, List"
+    "from typing import Dict, List\n",
+    "from rdkit import Chem"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "id": "recorded-temperature",
    "metadata": {},
    "outputs": [
@@ -57,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "id": "scientific-tiger",
    "metadata": {},
    "outputs": [],
@@ -81,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "id": "alternative-exhibition",
    "metadata": {},
    "outputs": [],
@@ -91,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 5,
    "id": "allied-supervisor",
    "metadata": {},
    "outputs": [
@@ -110,7 +111,7 @@
        "  '[H][C@@]12OC=C[C@]1([H])C1=C(O2)C=C(OC)C2=C1OC(=O)C1=C2CCOC1=O')]"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -271,10 +272,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "instant-rough",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "RDKit WARNING: [16:47:06] Conflicting single bond directions around double bond at index 26.\n",
+      "RDKit WARNING: [16:47:06]   BondStereo set to STEREONONE and single bond directions set to NONE.\n",
+      "RDKit ERROR: [16:50:52] Invalid InChI prefix in generating InChI Key\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Gathered 1857 results, missing 255 results\n"
+     ]
+    }
+   ],
    "source": [
     "from rdkit import Chem\n",
     "\n",
@@ -285,7 +303,7 @@
     "    # lookup CF with smiles\n",
     "    url_base = \"https://gnps-structure.ucsd.edu/classyfire?smiles=\"\n",
     "    smiles = smiles.strip(' ')\n",
-    "    safe_smiles = smiles #urllib.parse.quote(smiles)  # url encoding\n",
+    "    safe_smiles = urllib.parse.quote(smiles)  # url encoding\n",
     "    url = url_base + safe_smiles\n",
     "    try:\n",
     "        with urllib.request.urlopen(url) as inf:\n",
@@ -301,46 +319,28 @@
     "        if superclass_dict:\n",
     "            superclass = superclass_dict.get(\"name\", None)\n",
     "    \n",
-    "    \n",
     "    if superclass is None:\n",
-    "        # lookup inchikey from smiles\n",
-    "        url_base = \"https://gnps-structure.ucsd.edu/inchikey?smiles=\"\n",
-    "        url = url_base + safe_smiles\n",
+    "        # do a second try with inchikey from rdkit\n",
+    "        m = Chem.MolFromSmiles(smiles)\n",
+    "        rdkit_smiles = Chem.MolToSmiles(m, kekuleSmiles=False,isomericSmiles=False)\n",
+    "        m = Chem.MolFromSmiles(rdkit_smiles)\n",
+    "        rdkit_inchi = Chem.inchi.MolToInchiKey(m)\n",
+    "        url = f\"https://gnps-classyfire.ucsd.edu/entities/{rdkit_inchi}.json\"\n",
     "        try:\n",
     "            with urllib.request.urlopen(url) as inf:\n",
-    "                inchi_result = str(inf.read(), 'utf-8')\n",
-    "#                 print(inchi_result)\n",
+    "                rdkit_inchi_cf_result = inf.read()\n",
     "        except urllib.error.HTTPError:\n",
     "            # apparently the inchi request failed\n",
-    "            inchi_result = None\n",
-    "        \n",
-    "        # do CF lookup with inchikey\n",
-    "        if inchi_result is not None:\n",
-    "            url = f\"https://gnps-classyfire.ucsd.edu/entities/{inchi_result}.json\"\n",
-    "#             print(url)\n",
-    "            try:\n",
-    "                with urllib.request.urlopen(url) as inf:\n",
-    "                    inchi_cf_result = inf.read()\n",
-    "            except urllib.error.HTTPError:\n",
-    "                # apparently the inchi request failed\n",
-    "                inchi_cf_result = None\n",
-    "            \n",
-    "            # read CF result from inchikey lookup\n",
-    "            if inchi_cf_result is not None:\n",
-    "                cf_json = json.loads(inchi_cf_result)  # make a function that gathers result from json, no matter the source\n",
-    "                superclass_dict = cf_json.get(\"superclass\", None)\n",
-    "                if superclass_dict:\n",
-    "                    superclass = superclass_dict.get(\"name\", None)\n",
-    "    \n",
-    "    # do a last try with inchikey from rdkit\n",
-    "    m = Chem.MolFromSmiles(smiles)\n",
-    "    rdkit_smiles = Chem.MolToSmiles(m, kekuleSmiles=False,isomericSmiles=False)\n",
-    "    m = Chem.MolFromSmiles(rdkit_smiles)\n",
-    "    rdkit_inchi = Chem.inchi.MolToInchiKey(m)\n",
-    "    print(rdkit_smiles, rdkit_inchi)\n",
+    "            rdkit_inchi_cf_result = None\n",
+    "\n",
+    "        # read CF result from inchikey lookup\n",
+    "        if rdkit_inchi_cf_result is not None:\n",
+    "            cf_json = json.loads(rdkit_inchi_cf_result)  # make a function that gathers result from json, no matter the source\n",
+    "            superclass_dict = cf_json.get(\"superclass\", None)\n",
+    "            if superclass_dict:\n",
+    "                superclass = superclass_dict.get(\"name\", None)\n",
     "\n",
     "    result_list.append(superclass)\n",
-    "    break\n",
     "\n",
     "missing_res_num = len([elem for elem in result_list if elem is None])\n",
     "print(f\"Gathered {len(result_list)-missing_res_num} results, missing {missing_res_num} results\")"
@@ -354,12 +354,13 @@
     "## Make some functions\n",
     "- do_url_request(url: str) -> [bytes, None]\n",
     "- get_json_cf_results(raw_json: bytes, wanted_info_list: List[str]) -> List[str]\n",
+    "- get inchikey from rdkit\n",
     "- master func"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "competitive-seeking",
    "metadata": {},
    "outputs": [],
@@ -394,11 +395,89 @@
     "    cf_json = json.loads(raw_json)\n",
     "    for key in wanted_keys_list_name:\n",
     "        info_dict = cf_json.get(key, \"\")\n",
+    "        info = \"\"\n",
     "        if info_dict:\n",
     "            info = info_dict.get('name', \"\")\n",
-    "    wanted_info.append(info)\n",
+    "        wanted_info.append(info)\n",
     "    \n",
-    "    return wanted_info"
+    "    return wanted_info\n",
+    "\n",
+    "def inchikey_from_smiles_rdkit(smiles: str) -> str:\n",
+    "    \"\"\"Use rdkit to go from smiles to inchikey\n",
+    "    \n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    smiles:\n",
+    "        Smiles to be turned into inchikey\n",
+    "    \"\"\"\n",
+    "    m = Chem.MolFromSmiles(smiles)\n",
+    "    smiles = Chem.MolToSmiles(m, kekuleSmiles=False,isomericSmiles=False)\n",
+    "    m = Chem.MolFromSmiles(smiles)\n",
+    "    inchikey = Chem.inchi.MolToInchiKey(m)\n",
+    "    return inchikey"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "clear-motivation",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "wanted_columns_name = ['kingdom','superclass',\\\n",
+    "    'class','subclass', 'direct_parent']\n",
+    "# ['cf_intermediate_0','cf_intermediate_1',\\\n",
+    "#     'cf_intermediate_2','cf_intermediate_3','cf_intermediate_4',\\\n",
+    "#     'cf_intermediate_5','cf_molecular_framework','cf_alternative_parents',\\\n",
+    "#     'cf_substituents', 'cf_description']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "bizarre-poultry",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'BGC0000001_abyssomicin C': ['CC1C[C@]23OC(=O)C4=C2OC1C(O)C3\\\\C=C/C(=O)[C@@H](C)C[C@@H](C)C4=O', 'FNEADFUPWHAVTA-UHFFFAOYSA-N', 'Organic compounds', 'Organoheterocyclic compounds', 'Oxanes', '', 'Oxanes']}\n"
+     ]
+    }
+   ],
+   "source": [
+    "result_dict = {}\n",
+    "for i, (np, smiles) in enumerate(comp_dict.items()):\n",
+    "    result = None\n",
+    "    smiles = smiles.strip(' ')\n",
+    "    rdkit_inchi = inchikey_from_smiles_rdkit(smiles)\n",
+    "\n",
+    "    # lookup CF with smiles\n",
+    "    url_base = \"https://gnps-structure.ucsd.edu/classyfire?smiles=\"\n",
+    "    safe_smiles = urllib.parse.quote(smiles)  # url encoding\n",
+    "    url_smiles = url_base + safe_smiles\n",
+    "    smiles_result = do_url_request(url_smiles)\n",
+    "    \n",
+    "    # read CF result\n",
+    "    if smiles_result is not None:\n",
+    "        result = get_json_cf_results(smiles_result, wanted_columns_name)\n",
+    "    \n",
+    "    if not result:\n",
+    "        # do a second try with inchikey from rdkit\n",
+    "        url_inchi = f\"https://gnps-classyfire.ucsd.edu/entities/{rdkit_inchi}.json\"\n",
+    "        rdkit_inchi_result = do_url_request(url_inchi)\n",
+    "\n",
+    "        # read CF result from inchikey lookup\n",
+    "        if rdkit_inchi_result is not None:\n",
+    "            result = get_json_cf_results(rdkit_inchi_result, wanted_columns_name)\n",
+    "\n",
+    "    if not result:\n",
+    "        result = ['' for _ in range(len(wanted_columns_name))]\n",
+    "    \n",
+    "    result_dict[np] = [smiles, rdkit_inchi] + result\n",
+    "    break\n",
+    "print(result_dict)"
    ]
   }
  ],
@@ -418,7 +497,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.9"
+   "version": "3.7.2"
   }
  },
  "nbformat": 4,
