update for getting CF/NPC classes

--- a/notebooks/get_mibig_smiles.ipynb
+++ b/notebooks/get_mibig_smiles.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "necessary-chest",
    "metadata": {},
    "outputs": [],
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "regulated-dallas",
    "metadata": {},
    "outputs": [],
@@ -38,24 +38,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "id": "detailed-chile",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'/mnt/scratch/louwe015/mibig_json_2.0/BGC0000020.json'"
+       "('/mnt/scratch/louwe015/mibig_json_2.0/BGC0000020.json', True)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "bgc_json = mibig_files[0]\n",
-    "bgc_json"
+    "bgc_json, os.path.isfile(bgc_json)"
    ]
   },
   {
@@ -250,7 +250,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.9"
+   "version": "3.7.2"
   }
  },
  "nbformat": 4,
